# yo

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-upload-deb.yml  cargo-publish.yml  release.yml  update-aur-pkgbuild.yml  update-homebrew-formula.yml  update-scoop-manifest.yml
Formula/: yo-bin.rb
pkg/brew/: yo-bin.rb
src/: cli.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs
tests/: command_tests.rs
www/: bun.lockb  index.html  package.json  tsconfig.json
www/public/: yo-terminal.html  yo.css
www/src/: Experience.tsx  RemoteReadme.tsx  index.tsx  style.css
