[package]
name = "yo"
version = "1.0.0"
edition = "2021"
authors = ["Montek Kundan <montekkundan@gmail.com>"]
license = "MIT"
description = "Ask your terminal anything using AI (OpenAI or Ollama)."
readme = "README.md"
homepage = "https://github.com/montekkundan/yo"
repository = "https://github.com/montekkundan/yo"
keywords = ["ai", "cli", "openai", "ollama", "chatgpt"]
categories = ["command-line-utilities", "artificial-intelligence"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
futures-util = "0.3.31"
prettytable = "0.10.0"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"

[dev-dependencies]
dotenv = "0.15.0"
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
