[package]
name = "yo"
version = "1.3.4"
edition = "2021"
authors = ["Montek Kundan <montekkundan@gmail.com>"]
license = "MIT"
description = "Ask your terminal anything using AI (OpenAI or Ollama)."
readme = "README.md"
homepage = "https://github.com/montekkundan/yo"
repository = "https://github.com/montekkundan/yo"
keywords = ["ai", "cli", "openai", "ollama", "chatgpt"]
categories = ["command-line-utilities"]
exclude = [
    "target/*",
    "www/*",
    "tests/*",
    "*.lock",
    "*.yml",
    "*.rb",
    "*.glb",
    "*.svg",
    "*.html",
    "*.css",
    "*.json",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "*.gif",
    "*.mp4",
    "*.mov",
    "*.avi",
    "*.zip",
    "*.tar",
    "*.gz",
    "*.7z",
    "*.exe",
    "*.dll",
    "*.so",
    "*.dylib",
    "*.bin",
    "*.crate",
    "Formula/*"
]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
futures-util = "0.3.31"
prettytable = "0.10.0"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
openssl = "0.10"
async-trait = "0.1.88"
anyhow = "1.0.98"
rusqlite = "0.31"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
dotenv = "0.15.0"
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
